# Yooso

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  crates.js  dev.sh  help.html  install.sh  package-lock.json  package.json  settings.html  src-files.js  tsconfig.json
.github/: CODEOWNERS  SECURITY.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request.md
.github/scripts/: openapi-merge.ts
.github/workflows/: cargo.yml  npm.yml  preview.yml  rustdoc.yml
search.index/: 00963e3ba60b.js  01a501807c7d.js  02734d202a17.js  03621624e369.js  041cc86cbb15.js  04b777a304fc.js  059c0f9ca8f8.js  05a6bf5ff295.js  05c6ce2b8a.js  0620a501c086.js  0622e2c385a4.js  0666ab4b573d.js  076b65cfc0.js  07df4741a525.js  07ff72419d58.js  0855ff8d377b.js  08af25e74646.js  095e05eb0f9d.js  099ef80bf111.js  0a568f8ec87a.js  0aa0fa99919c.js  0b5caa1b8d82.js  0bcd44f3ef27.js  0d949d69f5f2.js  0e1018d484.js  0f225100efd5.js  0f70b3d7a530.js  0faac4f85c00.js  0faac52dc72a.js  100e7ba83175.js  106950a1296b.js  10e772d060.js  11a1da8e2bea.js  11ec9f5a02ed.js  12e0da38fab5.js  133138a686fe.js  14725e66e90a.js  14d5272130.js  14d57dfd1181.js  15dcd41d237d.js  (+172 more)
src/yooso/: lib.rs.html
util_obfuscate/: all.html  constant.OBFUSCATION_MASK.html  fn.obfuscate.html  index.html  sidebar-items.js  struct.Obfuscated.html
util_validation/: all.html  fn.not_empty.html  fn.not_sql_keyword.html  fn.valid_sql_ident.html  fn.validate.html  index.html  sidebar-items.js  struct.Validated.html  struct.ValidationError.html  trait.ValidateFrom.html
yooso/: Cargo.toml  README.md  all.html  attr.delete.html  attr.get.html  attr.head.html  attr.launch.html  attr.options.html  attr.patch.html  attr.post.html  attr.put.html  build.rs  index.html  macro.routes.html  sidebar-items.js  struct.Component.html  struct.Entity.html  struct.Route.html  struct.Yooso.html
yooso-api/: Cargo.toml  PROTOCOL.md  README.md
yooso-api/src/: lib.rs  success.rs
yooso-api/src/components/: create.rs  delete.rs  list.rs  mod.rs  patch.rs  view.rs
yooso-api/src/entities/: add_component.rs  components.rs  create.rs  delete.rs  list.rs  mod.rs  remove_component.rs  view.rs
yooso-api/src/logs/: fairing.rs  mod.rs
yooso-core/: Cargo.toml  README.md
yooso-core/src/: app.rs  component.rs  entity.rs  error.rs  field.rs  lib.rs
yooso-core/src/components/: list.rs  mod.rs
yooso-core/src/error/: impls.rs  mod.rs
yooso-example/: Cargo.toml  README.md
yooso-js/: .gitignore  README.md  openapi-ts.config.ts  package.json  tsconfig.json
yooso-lib-js/: tsconfig.json
yooso-macro/: Cargo.toml  README.md
yooso-macro/src/: collection_fields.rs  inner_macro_meta.rs  lib.rs  macro_collection.rs  macro_database.rs  macro_docapi.rs  macro_launch.rs  macro_query.rs  util.rs
yooso-storage/: Cargo.toml
yooso-storage/src/: components.rs  entities.rs  fields.rs  lib.rs  logs.rs  pagination.rs  validate.rs
yooso-studio/: .env.demo  .env.development  README.md  index.html  package.json  tsconfig.json  vite.config.ts
yooso_api/: all.html  index.html  sidebar-items.js  struct.Yooso.html
yooso_core/: all.html  index.html  sidebar-items.js  struct.Component.html  struct.ComponentField.html  struct.Entity.html
yooso_example/: all.html  fn.main.html  index.html
yooso_macro/: all.html  attr.collection.html  attr.database.html  attr.docapi.html  attr.launch.html  index.html  macro.query.html  sidebar-items.js
yooso_storage/: all.html  index.html  sidebar-items.js  struct.ComponentFieldRecord.html  struct.ComponentFieldTable.html  struct.ComponentRecord.html  struct.ComponentTable.html  struct.EntityRecord.html  struct.EntityTable.html  struct.GeneralDB.html  struct.GeneralDBState.html  struct.LogDB.html  struct.LogDBState.html  struct.LogRecord.html  struct.LogRecordTable.html  struct.MetaDB.html  struct.MetaDBState.html  struct.Pagination.html
(+200 files in other folders)
