[package]
name = "yooso-macro"
version = "0.0.0"
edition = "2024"

[lib]
proc-macro = true

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.23.1", features = [ "v7", "serde" ] }
yooso = { path = "../yooso" }
yooso-core = { path = "../yooso-core" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
