[package]
name = "yooso-storage"
version = "0.1.0"
edition = "2024"

[features]
default = ["rusqlite"]
rusqlite = ["rusqlite/bundled"]
# postgres = [] # https://docs.rs/postgres/latest/postgres/#features

[dependencies]
chrono = { version = "0.4.44", features = [ "serde" ] }
rusqlite = { version = "0.31", optional = true, features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0"
uuid = { version = "1.23.1", features = [ "v7", "serde" ] }
yooso-macro = { path = "../yooso-macro" }
yooso-core = { path = "../yooso-core" }
